# rosbag_recording_services

./: README.md
data_recording/: CMakeLists.txt  package.xml
data_recording/config/: config.yaml
data_recording/launch/: data_recording.launch.py
data_recording/scripts/: data_recording_ros2.py
