<?xml version="1.0"?>
<package format="3">
  <name>data_recording</name>
  <version>0.1.0</version>
  <description>ROS package to allow starting and stopping of rosbag recordings via service calls.</description>
  <maintainer email="vlad.m@agorarobotics.com">vladm</maintainer>
  <license>None</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>